--- a/MobileSafe/app/src/main/AndroidManifest.xml
+++ b/MobileSafe/app/src/main/AndroidManifest.xml
@@ -16,7 +16,14 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.WIFI_STATE_CHANGED"/>
+    <uses-permission android:name="android.launcher2.permission.READ_SETTINGS"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/frog"
@@ -86,7 +93,15 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.DragViewActivity"></activity>
+        <activity android:name=".activity.DragViewActivity" />
+        <activity android:name=".activity.CallSafeActivity" />
+
+        <service
+            android:name=".service.CallSafeService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.AppManagerActivity"></activity>
     </application>
 
 </manifest>
