--- a/MobileSafe/app/build.gradle
+++ b/MobileSafe/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.7'
+
 }
