--- a/MobileSafe/app/build.gradle
+++ b/MobileSafe/app/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     compile files('libs/xUtils-2.6.14.jar')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.7'
-
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    testCompile 'junit:junit:4.12'
+    compile files('libs/core.jar')
 }
