--- a/MobileSafe/app/src/main/AndroidManifest.xml
+++ b/MobileSafe/app/src/main/AndroidManifest.xml
@@ -24,6 +24,18 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.REAL_GET_TASKS" />
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
 
     <application
         android:allowBackup="true"
@@ -146,7 +158,26 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.AntivirusActivity"></activity>
+        <activity android:name=".activity.AntivirusActivity" />
+        <activity android:name=".activity.AppLockActivity" />
+
+        <service
+            android:name=".service.WatchDogService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.EnterPwdActivity"
+            android:launchMode="singleInstance" />
+        <activity android:name=".activity.CleanCacheActivity" />
+        <activity android:name=".activity.TrafficStatisticsActivity" />
+        <activity
+            android:name=".activity.QRcodeActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
     </application>
 
 </manifest>
